--- a/Analysis/scratch_test.ipynb
+++ b/Analysis/scratch_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 132,
    "id": "c7df6fb3",
    "metadata": {},
    "outputs": [
@@ -28,85 +28,30 @@
     "HZ4Lep = uproot.open(\"hz_hww_4l.root\")\n",
     "HZ4Lep_tree = HZ4Lep[\"Delphes\"]\n",
     "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
-    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"np\", entry_stop=10)"
+    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"np\", entry_stop=13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 134,
    "id": "a865deae",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'MissingET_size': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1]),\n",
-       " 'MissingET.Eta': array([array([0.17216694], dtype=float32),\n",
-       "        array([-0.41326123], dtype=float32),\n",
-       "        array([-0.70543104], dtype=float32),\n",
-       "        array([-1.4994732], dtype=float32),\n",
-       "        array([0.37411535], dtype=float32),\n",
-       "        array([0.00602116], dtype=float32),\n",
-       "        array([-0.14493024], dtype=float32),\n",
-       "        array([-0.01158211], dtype=float32),\n",
-       "        array([-0.7678567], dtype=float32),\n",
-       "        array([0.20850518], dtype=float32)], dtype=object),\n",
-       " 'MissingET.Phi': array([array([-2.6963134], dtype=float32),\n",
-       "        array([1.0747172], dtype=float32),\n",
-       "        array([-2.8127031], dtype=float32),\n",
-       "        array([-2.8334908], dtype=float32),\n",
-       "        array([-1.6664257], dtype=float32),\n",
-       "        array([-0.34192806], dtype=float32),\n",
-       "        array([1.3058668], dtype=float32),\n",
-       "        array([-1.4994422], dtype=float32),\n",
-       "        array([-2.5789049], dtype=float32),\n",
-       "        array([0.91387266], dtype=float32)], dtype=object),\n",
-       " 'Jet_size': array([2, 2, 3, 2, 2, 2, 3, 2, 3, 2]),\n",
-       " 'Electron_size': array([1, 3, 2, 2, 4, 3, 4, 3, 0, 0]),\n",
-       " 'Electron.Eta': array([array([-0.9359866], dtype=float32),\n",
-       "        array([ 0.09553064, -0.63409066,  0.9847768 ], dtype=float32),\n",
-       "        array([-0.3096545 ,  0.82630336], dtype=float32),\n",
-       "        array([-0.1393309,  1.9472972], dtype=float32),\n",
-       "        array([ 0.41789332, -0.75005233, -0.9773381 ,  0.5798177 ], dtype=float32),\n",
-       "        array([ 0.21124168, -0.83132005,  0.7789144 ], dtype=float32),\n",
-       "        array([-0.50607204,  0.71755385,  0.4722107 ,  0.6418267 ], dtype=float32),\n",
-       "        array([-1.5784721,  0.2221993,  1.5740525], dtype=float32),\n",
-       "        array([], dtype=float32), array([], dtype=float32)], dtype=object),\n",
-       " 'Electron.Phi': array([array([0.52325255], dtype=float32),\n",
-       "        array([ 2.1152663, -1.6176475, -1.4590349], dtype=float32),\n",
-       "        array([ 2.1102793, -2.2903023], dtype=float32),\n",
-       "        array([ 0.5056228, -1.4953814], dtype=float32),\n",
-       "        array([ 1.7474115, -2.4666731, -0.4367092,  0.6943812], dtype=float32),\n",
-       "        array([ 1.7535739, -2.2989724, -2.2583284], dtype=float32),\n",
-       "        array([-1.3578515, -2.993692 ,  1.3770468, -2.063367 ], dtype=float32),\n",
-       "        array([2.362128 , 1.5696392, 0.8348102], dtype=float32),\n",
-       "        array([], dtype=float32), array([], dtype=float32)], dtype=object),\n",
-       " 'Muon_size': array([1, 1, 0, 1, 0, 0, 0, 1, 4, 4]),\n",
-       " 'Muon.Eta': array([array([-0.11814968], dtype=float32),\n",
-       "        array([0.14142375], dtype=float32), array([], dtype=float32),\n",
-       "        array([1.6043687], dtype=float32), array([], dtype=float32),\n",
-       "        array([], dtype=float32), array([], dtype=float32),\n",
-       "        array([2.0198126], dtype=float32),\n",
-       "        array([ 0.4450179 ,  0.75743407, -1.0444065 ,  0.41462266], dtype=float32),\n",
-       "        array([ 0.09579755,  0.6235091 , -0.28310764, -0.98002833], dtype=float32)],\n",
-       "       dtype=object),\n",
-       " 'Muon.Phi': array([array([-0.8628896], dtype=float32),\n",
-       "        array([-1.5912784], dtype=float32), array([], dtype=float32),\n",
-       "        array([1.8786007], dtype=float32), array([], dtype=float32),\n",
-       "        array([], dtype=float32), array([], dtype=float32),\n",
-       "        array([-0.34757325], dtype=float32),\n",
-       "        array([ 1.8354077, -0.8209808, -0.7313113, -0.0442621], dtype=float32),\n",
-       "        array([-1.4895245,  0.8498185, -2.634674 , -3.1171649], dtype=float32)],\n",
-       "       dtype=object)}"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3988\\246761958.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mHZ4Lep_array\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
+     ]
     }
    ],
    "source": [
-    "HZ4Lep_array\n"
+    "\n",
+    "HZ4Lep_array[1]"
    ]
   },
   {
