--- a/Analysis/scratch_test.ipynb
+++ b/Analysis/scratch_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "id": "c7df6fb3",
    "metadata": {},
    "outputs": [
@@ -28,35 +28,12 @@
     "HZ4Lep = uproot.open(\"hz_hww_4l.root\")\n",
     "HZ4Lep_tree = HZ4Lep[\"Delphes\"]\n",
     "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
-    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"np\", entry_stop=13)"
+    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"np\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "a865deae",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3988\\246761958.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mHZ4Lep_array\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 1"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "HZ4Lep_array[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 146,
    "id": "13d437b8",
    "metadata": {},
    "outputs": [
@@ -66,7 +43,7 @@
        "1"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,8 +57,11 @@
     "    ax.set_xlabel(\"Delta R\")\n",
     "    ax.set_ylabel(\"Count\")\n",
     "    deta_r=np.array([])\n",
-    "    for number_event in range(len(n_array)):\n",
+    "    for number_event in range(len(n_array[\"MissingET_size\"])):\n",
     "        enum=n_array[\"Electron_size\"][number_event]\n",
+    "        mnum=n_array[\"Muon_size\"][number_event]\n",
+    "        if (enum+mnum)!=4:\n",
+    "            continue\n",
     "        for ie in range(enum):\n",
     "            dphi=n_array[\"Electron.Phi\"][number_event][ie]-n_array[\"MissingET.Phi\"][number_event]\n",
     "            while (dphi > np.pi):\n",
@@ -90,7 +70,6 @@
     "                dphi += 2*np.pi\n",
     "            dr=np.sqrt((n_array[\"Electron.Eta\"][number_event][ie]-n_array[\"MissingET.Eta\"][number_event])**2 + dphi**2)\n",
     "            deta_r=np.append(deta_r, dr)\n",
-    "        mnum=n_array[\"Muon_size\"][number_event]\n",
     "        for im in range(mnum):\n",
     "            dphi=n_array[\"Muon.Phi\"][number_event][im]-n_array[\"MissingET.Phi\"][number_event]\n",
     "            while (dphi > np.pi):\n",
@@ -110,8 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "66d42501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HZ4LepLFV = uproot.open(\"hz_hMuE_LFV.root\")\n",
+    "\n",
+    "HZ4LepLFV_tree = HZ4LepLFV[\"Delphes\"]\n",
+    "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
+    "HZ4LepLFV_array = HZ4LepLFV_tree.arrays(column_arrays, library=\"np\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "a186bdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_drFromMET(HZ4LepLFV_array, \"HZ4LepLFV\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5663f3",
    "metadata": {},
    "outputs": [],
    "source": []
