Add PT distribution function and update column arrays for electron PT analysis

--- a/Analysis/scratch_test.ipynb
+++ b/Analysis/scratch_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 40,
    "id": "c7df6fb3",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import awkward as ak\n",
     "import time\n",
     "\n",
     "# Record the start time\n",
@@ -28,7 +29,47 @@
     "HZ4Lep = uproot.open(\"hz_hww_4l.root\")\n",
     "HZ4Lep_tree = HZ4Lep[\"Delphes\"]\n",
     "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
-    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"np\")"
+    "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"ak\", entry_stop=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "17983d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Array [-2.7, 1.07, -2.81, ... -2.58, 0.914] type='10 * ?float32'>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# td=HZ4Lep_array[\"MissingET.Phi\"]-HZ4Lep_array[\"Muon.Phi\"]\n",
+    "ak.firsts(HZ4Lep_array[\"MissingET.Phi\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f9dacdc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 * {\"MissingET_size\": int32, \"MissingET.Eta\": var * float32, \"MissingET.Phi\": var * float32, \"Jet_size\": int32, \"Electron_size\": int32, \"Electron.Eta\": var * float32, \"Electron.Phi\": var * float32, \"Muon_size\": int32, \"Muon.Eta\": var * float32, \"Muon.Phi\": var * float32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ak.type(HZ4Lep_array))"
    ]
   },
   {
