--- a/Analysis/scratch_test.ipynb
+++ b/Analysis/scratch_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "c7df6fb3",
    "metadata": {},
    "outputs": [
@@ -28,23 +28,23 @@
     "print(\"Starting analysis...\")\n",
     "HZ4Lep = uproot.open(\"hz_hww_4l.root\")\n",
     "HZ4Lep_tree = HZ4Lep[\"Delphes\"]\n",
-    "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
+    "column_arrays = [\"MissingET_size\",\"MissingET.Eta\",\"MissingET.Phi\",\"Jet_size\",\"Electron_size\",\"Electron.PT\",\"Electron.Eta\",\"Electron.Phi\",\"Muon_size\",\"Muon.Eta\",\"Muon.Phi\"]\n",
     "HZ4Lep_array = HZ4Lep_tree.arrays(column_arrays, library=\"ak\", entry_stop=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "17983d4a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Array [-2.7, 1.07, -2.81, ... -3.14, 2.7] type='10000 * float32'>"
+       "<Array [20, 55.4, 42.8, ... 28.3, None, 45.6] type='10000 * ?float32'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
    "source": [
     "# td=HZ4Lep_array[\"MissingET.Phi\"]-HZ4Lep_array[\"Muon.Phi\"]\n",
     "# ak.firsts(HZ4Lep_array[\"MissingET.Phi\"])\n",
-    "HZ4Lep_array[\"MissingET.Phi\"][:,0]"
+    "ak.firsts(HZ4Lep_array[\"Electron.PT\"])"
    ]
   },
   {
