--- a/Analysis/cppAnalysis.ipynb
+++ b/Analysis/cppAnalysis.ipynb
@@ -6,12 +6,328 @@
    "id": "c6ca949f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <string>\n",
+    "#include <map>\n",
+    "#include <algorithm>\n",
+    "#include \"TFile.h\"\n",
+    "#include \"TTree.h\"\n",
+    "#include \"TChain.h\"\n",
+    "#include \"TH1D.h\"\n",
+    "#include \"THStack.h\"\n",
+    "#include \"TCanvas.h\"\n",
+    "#include \"TLegend.h\"\n",
+    "#include \"TLorentzVector.h\"\n",
+    "#include \"Delphes.C\" // Assumes Delphes class is available\n",
+    "\n",
+    "// --- Physics Constants ---\n",
+    "const double ELECTRON_MASS = 0.000511; // GeV/c^2\n",
+    "const double MUON_MASS = 0.1057;       // GeV/c^2\n",
+    "const double HIGGS_MASS = 125.0;       // GeV/c^2\n",
+    "const double Z_MASS = 91.1876;         // GeV/c^2\n",
+    "const double BEAM_ENERGY = 240.0;      // GeV (for recoil mass)\n",
+    "\n",
+    "// --- Helper Struct for Histograms ---\n",
+    "// To keep the code clean, we group histograms by dataset.\n",
+    "struct Histograms {\n",
+    "    TH1D* Z_selectionMass;\n",
+    "    TH1D* Higgs_recoiledMass;\n",
+    "    TH1D* Higgs_reconstructedMass;\n",
+    "    TH1D* Higgs_selectionMass;\n",
+    "    TH1D* Z_recoiledMass;\n",
+    "    TH1D* Z_reconstructedMass;\n",
+    "    \n",
+    "    // For cut report\n",
+    "    long long n_total = 0;\n",
+    "    long long n_pass_cut1 = 0;\n",
+    "    long long n_pass_cut2 = 0;\n",
+    "    long long n_pass_cut3 = 0;\n",
+    "\n",
+    "    // Constructor to initialize histograms\n",
+    "    Histograms(const std::string& prefix) {\n",
+    "        Z_selectionMass         = new TH1D((prefix + \"_Z_selectionMass\").c_str(), \"Z Mass (from Z selection);GeV;Entries\", 400, 50, 150);\n",
+    "        Higgs_recoiledMass      = new TH1D((prefix + \"_Higgs_recoiledMass\").c_str(), \"Higgs Recoil Mass (from Z selection);GeV;Entries\", 400, 100, 150);\n",
+    "        Higgs_reconstructedMass = new TH1D((prefix + \"_Higgs_reconstructedMass\").c_str(), \"Higgs Reconstructed Mass (from Z selection);GeV;Entries\", 400, 100, 150);\n",
+    "        Higgs_selectionMass     = new TH1D((prefix + \"_Higgs_selectionMass\").c_str(), \"Higgs Mass (from Higgs selection);GeV;Entries\", 400, 100, 150);\n",
+    "        Z_recoiledMass          = new TH1D((prefix + \"_Z_recoiledMass\").c_str(), \"Z Recoil Mass (from Higgs selection);GeV;Entries\", 400, 50, 150);\n",
+    "        Z_reconstructedMass     = new TH1D((prefix + \"_Z_reconstructedMass\").c_str(), \"Z Reconstructed Mass (from Higgs selection);GeV;Entries\", 400, 50, 150);\n",
+    "    }\n",
+    "};\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "398daecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "// --- Main Analysis Function ---\n",
+    "void run_analysis() {\n",
+    "    // --- Configuration ---\n",
+    "    std::map<std::string, std::string> file_paths = {\n",
+    "        {\"HZ4Lep\", \"Bg1_hz.root\"},\n",
+    "        {\"ZWW4Lep\", \"Bg2_zww.root\"},\n",
+    "        {\"HZ4LepLFV\", \"Sn1_hzLFV.root\"}\n",
+    "    };\n",
+    "    \n",
+    "    // Create histograms for each dataset\n",
+    "    std::map<std::string, Histograms> hist_map;\n",
+    "    for (auto const& [name, path] : file_paths) {\n",
+    "        hist_map.emplace(name, Histograms(name));\n",
+    "    }\n",
+    "    \n",
+    "    TLorentzVector beam_vector(0, 0, 0, BEAM_ENERGY);\n",
+    "\n",
+    "    // Loop over each file/dataset\n",
+    "    for (auto const& [name, path] : file_paths) {\n",
+    "        TChain* chain = new TChain(\"Delphes\");\n",
+    "        chain->Add(path.c_str());\n",
+    "\n",
+    "        if (chain->GetEntries() == 0) {\n",
+    "            std::cerr << \"Error opening file or tree not found in: \" << path << std::endl;\n",
+    "            continue;\n",
+    "        }\n",
+    "        \n",
+    "        std::cout << \"Processing file: \" << path << \" for dataset: \" << name << std::endl;\n",
+    "\n",
+    "        Delphes d(chain); // Create Delphes object on the stack from the TChain\n",
+    "        long long n_entries = chain->GetEntries();\n",
+    "        hist_map.at(name).n_total = n_entries;\n",
+    "\n",
+    "        // --- Event Loop ---\n",
+    "        for (long long i = 0; i < n_entries; ++i) {\n",
+    "            d.GetEntry(i);\n",
+    "\n",
+    "            // --- Cut 1: Exactly 4 leptons ---\n",
+    "            if (d.Electron_size + d.Muon_size != 4) continue;\n",
+    "            hist_map.at(name).n_pass_cut1++;\n",
+    "            \n",
+    "            // --- Cut 2: Odd number of electrons and muons (signal signature) ---\n",
+    "            if (d.Electron_size % 2 == 0 || d.Muon_size % 2 == 0) continue;\n",
+    "            hist_map.at(name).n_pass_cut2++;\n",
+    "\n",
+    "            // --- Cut 3: Total charge is zero and no charge product violation ---\n",
+    "            int total_charge = 0;\n",
+    "            int charge_product = 1;\n",
+    "            for (int j = 0; j < d.Electron_size; ++j) {\n",
+    "                total_charge += d.Electron_Charge[j];\n",
+    "                charge_product *= d.Electron_Charge[j];\n",
+    "            }\n",
+    "            for (int j = 0; j < d.Muon_size; ++j) {\n",
+    "                total_charge += d.Muon_Charge[j];\n",
+    "                charge_product *= d.Muon_Charge[j];\n",
+    "            }\n",
+    "            if (total_charge != 0 || charge_product != 1) continue;\n",
+    "            hist_map.at(name).n_pass_cut3++;\n",
+    "\n",
+    "            // --- Particle Reconstruction with TLorentzVector ---\n",
+    "            std::vector<TLorentzVector> electrons, muons, other_leptons, single_lepton_type;\n",
+    "            \n",
+    "            // This logic identifies the LFV candidate lepton type (e or mu)\n",
+    "            bool is_electron_single = (d.Electron_size == 1);\n",
+    "            \n",
+    "            for (int j = 0; j < d.Electron_size; ++j) {\n",
+    "                TLorentzVector p;\n",
+    "                p.SetPtEtaPhiM(d.Electron_PT[j], d.Electron_Eta[j], d.Electron_Phi[j], ELECTRON_MASS);\n",
+    "                electrons.push_back(p);\n",
+    "                if (is_electron_single) single_lepton_type.push_back(p);\n",
+    "                else other_leptons.push_back(p);\n",
+    "            }\n",
+    "            for (int j = 0; j < d.Muon_size; ++j) {\n",
+    "                TLorentzVector p;\n",
+    "                p.SetPtEtaPhiM(d.Muon_PT[j], d.Muon_Eta[j], d.Muon_Phi[j], MUON_MASS);\n",
+    "                muons.push_back(p);\n",
+    "                if (!is_electron_single) single_lepton_type.push_back(p);\n",
+    "                else other_leptons.push_back(p);\n",
+    "            }\n",
+    "\n",
+    "            // =========================================================================\n",
+    "            // === Strategy 1: Find Z candidate first, then reconstruct Higgs         ===\n",
+    "            // =========================================================================\n",
+    "            double best_Z_mass_diff = 1e9;\n",
+    "            TLorentzVector best_Z_candidate;\n",
+    "            int z_idx1 = -1, z_idx2 = -1;\n",
+    "\n",
+    "            // Find the best opposite-sign, same-flavor lepton pair\n",
+    "            for (size_t j = 0; j < other_leptons.size(); ++j) {\n",
+    "                for (size_t k = j + 1; k < other_leptons.size(); ++k) {\n",
+    "                    double mass = (other_leptons[j] + other_leptons[k]).M();\n",
+    "                    if (abs(mass - Z_MASS) < best_Z_mass_diff) {\n",
+    "                        best_Z_mass_diff = abs(mass - Z_MASS);\n",
+    "                        best_Z_candidate = other_leptons[j] + other_leptons[k];\n",
+    "                        z_idx1 = j;\n",
+    "                        z_idx2 = k;\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "            \n",
+    "            if(z_idx1 != -1) { // If a Z candidate was found\n",
+    "                hist_map.at(name).Z_selectionMass->Fill(best_Z_candidate.M());\n",
+    "                hist_map.at(name).Higgs_recoiledMass->Fill((beam_vector - best_Z_candidate).M());\n",
+    "                \n",
+    "                // The remaining lepton is the LFV one from the \"other_leptons\"\n",
+    "                int lfv_idx = 3 - z_idx1 - z_idx2; // The index of the third lepton\n",
+    "                TLorentzVector higgs_reconstructed = single_lepton_type[0] + other_leptons[lfv_idx];\n",
+    "                hist_map.at(name).Higgs_reconstructedMass->Fill(higgs_reconstructed.M());\n",
+    "            }\n",
+    "\n",
+    "            // =========================================================================\n",
+    "            // === Strategy 2: Find Higgs (LFV) candidate first, then reconstruct Z  ===\n",
+    "            // =========================================================================\n",
+    "            double best_H_mass_diff = 1e9;\n",
+    "            TLorentzVector best_H_candidate;\n",
+    "            int h_electron_idx = -1, h_muon_idx = -1;\n",
+    "\n",
+    "            for (size_t j = 0; j < electrons.size(); ++j) {\n",
+    "                for (size_t k = 0; k < muons.size(); ++k) {\n",
+    "                     double mass = (electrons[j] + muons[k]).M();\n",
+    "                     if (abs(mass - HIGGS_MASS) < best_H_mass_diff) {\n",
+    "                         best_H_mass_diff = abs(mass - HIGGS_MASS);\n",
+    "                         best_H_candidate = electrons[j] + muons[k];\n",
+    "                         h_electron_idx = j;\n",
+    "                         h_muon_idx = k;\n",
+    "                     }\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "            if(h_electron_idx != -1) { // If a Higgs candidate was found\n",
+    "                hist_map.at(name).Higgs_selectionMass->Fill(best_H_candidate.M());\n",
+    "                hist_map.at(name).Z_recoiledMass->Fill((beam_vector - best_H_candidate).M());\n",
+    "                \n",
+    "                // Find remaining two leptons to reconstruct Z\n",
+    "                std::vector<TLorentzVector> remaining_leptons;\n",
+    "                for(size_t j=0; j<electrons.size(); ++j) if(j != h_electron_idx) remaining_leptons.push_back(electrons[j]);\n",
+    "                for(size_t j=0; j<muons.size(); ++j) if(j != h_muon_idx) remaining_leptons.push_back(muons[j]);\n",
+    "                \n",
+    "                if(remaining_leptons.size() == 2) {\n",
+    "                    TLorentzVector z_reconstructed = remaining_leptons[0] + remaining_leptons[1];\n",
+    "                    hist_map.at(name).Z_reconstructedMass->Fill(z_reconstructed.M());\n",
+    "                }\n",
+    "            }\n",
+    "        } // End of event loop\n",
+    "        \n",
+    "        delete chain; // Clean up the TChain\n",
+    "    } // End of file loop\n",
+    "\n",
+    "    // --- Plotting ---\n",
+    "    std::cout << \"\\nPlotting histograms...\" << std::endl;\n",
+    "    \n",
+    "    // Define plot configurations\n",
+    "    std::vector<std::string> plot_names = {\n",
+    "        \"Z_selectionMass\", \"Higgs_recoiledMass\", \"Higgs_reconstructedMass\",\n",
+    "        \"Higgs_selectionMass\", \"Z_recoiledMass\", \"Z_reconstructedMass\"\n",
+    "    };\n",
+    "    \n",
+    "    std::vector<std::string> dataset_order = {\"HZ4LepLFV\", \"ZWW4Lep\", \"HZ4Lep\"};\n",
+    "    std::vector<Color_t> colors = {kOrange, kAzure - 3, kGreen + 1};\n",
+    "\n",
+    "    for (const auto& plot_name : plot_names) {\n",
+    "        TCanvas* c1 = new TCanvas(\"c1\", \"c1\", 800, 600);\n",
+    "        THStack* hs = new THStack(\"hs\", \"\");\n",
+    "        TLegend* legend = new TLegend(0.65, 0.7, 0.88, 0.88);\n",
+    "        \n",
+    "        double max_y = 0;\n",
+    "\n",
+    "        for (size_t i = 0; i < dataset_order.size(); ++i) {\n",
+    "            const auto& name = dataset_order[i];\n",
+    "            TH1D* h = nullptr;\n",
+    "            \n",
+    "            // A bit verbose, but safe way to get the correct histogram\n",
+    "            if (plot_name == \"Z_selectionMass\") h = hist_map.at(name).Z_selectionMass;\n",
+    "            else if (plot_name == \"Higgs_recoiledMass\") h = hist_map.at(name).Higgs_recoiledMass;\n",
+    "            else if (plot_name == \"Higgs_reconstructedMass\") h = hist_map.at(name).Higgs_reconstructedMass;\n",
+    "            else if (plot_name == \"Higgs_selectionMass\") h = hist_map.at(name).Higgs_selectionMass;\n",
+    "            else if (plot_name == \"Z_recoiledMass\") h = hist_map.at(name).Z_recoiledMass;\n",
+    "            else if (plot_name == \"Z_reconstructedMass\") h = hist_map.at(name).Z_reconstructedMass;\n",
+    "\n",
+    "            if (h) {\n",
+    "                // Normalize to unit area (like density=True)\n",
+    "                if (h->GetEntries() > 0 && h->Integral() > 0) {\n",
+    "                    h->Scale(1.0 / h->Integral());\n",
+    "                }\n",
+    "                \n",
+    "                h->SetLineColor(colors[i]);\n",
+    "                h->SetLineWidth(2);\n",
+    "                hs->Add(h, \"HIST\");\n",
+    "                legend->AddEntry(h, name.c_str(), \"l\");\n",
+    "                if (h->GetMaximum() > max_y) {\n",
+    "                    max_y = h->GetMaximum();\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        hs->Draw(\"NOSTACK\");\n",
+    "        hs->SetTitle(TString::Format(\"%s;GeV;Normalized Entries\", plot_name.c_str()));\n",
+    "        hs->SetMaximum(max_y * 1.2);\n",
+    "        legend->Draw();\n",
+    "        \n",
+    "        c1->SaveAs(TString::Format(\"Figure/%s.png\", plot_name.c_str()));\n",
+    "        \n",
+    "        // --- FIX ---\n",
+    "        // DO NOT delete hs and legend here.\n",
+    "        // They are owned by the canvas and ROOT will manage them.\n",
+    "        // Deleting them manually causes a double-free error.\n",
+    "        delete c1; // Deleting the canvas is sufficient\n",
+    "    }\n",
+    "    // --- Cut Report ---\n",
+    "    std::cout << \"\\n--- Cut Report ---\" << std::endl;\n",
+    "    for (const auto& name : dataset_order) {\n",
+    "        const auto& data = hist_map.at(name);\n",
+    "        if (data.n_total == 0) continue;\n",
+    "        printf(\"--- %s ---\\n\", name.c_str());\n",
+    "        printf(\"  Initial events: %lld\\n\", data.n_total);\n",
+    "        printf(\"  Pass Cut 1 (4 leptons): %lld (%.2f%%)\\n\", data.n_pass_cut1, (double)data.n_pass_cut1 / data.n_total * 100.0);\n",
+    "        printf(\"  Pass Cut 2 (Flavor):    %lld (%.2f%%)\\n\", data.n_pass_cut2, (double)data.n_pass_cut2 / data.n_total * 100.0);\n",
+    "        printf(\"  Pass Cut 3 (Charge):    %lld (%.2f%%)\\n\", data.n_pass_cut3, (double)data.n_pass_cut3 / data.n_total * 100.0);\n",
+    "    }\n",
+    "    \n",
+    "    gApplication->Terminate(0);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d16eeeb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mKernel ROOT C++ is not usable. Check the Jupyter output tab for more information. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59abffdb",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "HEP",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
