--- a/Analysis/cppAnalysis.ipynb
+++ b/Analysis/cppAnalysis.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c6ca949f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -61,7 +65,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "398daecd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -293,7 +301,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d16eeeb7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
    "outputs": [
     {
      "ename": "",
@@ -307,27 +319,31 @@
     }
    ],
    "source": [
-    "k"
+    "double a=1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "59abffdb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HEP",
-   "language": "python",
-   "name": "python3"
+   "display_name": "ROOT C++",
+   "language": "c++",
+   "name": "root"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.7.1"
+   "name": "c++",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
