Refactor and add new analysis scripts for LFV and Z off-shell cuts
- Updated execution counts in Jupyter notebook for clarity and organization.
- Added a new C++ script `LFV_VaryMassCut.cpp` to control cut flow and selection switches.
- Introduced `Z_off_shell_cut.cpp` to implement a cut that excludes Z bosons based on mass criteria, ensuring input file validation and output generation.

--- a/Check_crossection_across_Higgs/generate_MG5Card copy.ipynb
+++ b/Check_crossection_across_Higgs/generate_MG5Card copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "dc1cc662",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "242e861f",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "f4d86e6b",
    "metadata": {},
    "outputs": [],
@@ -68,13 +68,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "94738b71",
    "metadata": {},
    "outputs": [],
    "source": [
     "sorted_pairs = sorted(zip(mh_list, xsec_list))\n",
     "sorted_mh, sorted_xsec = zip(*sorted_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99c93c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(110.0, 0.021482),\n",
+       " (115.0, 0.019718),\n",
+       " (120.0, 0.017863),\n",
+       " (125.0, 0.015901),\n",
+       " (130.0, 0.013802),\n",
+       " (135.0, 0.011504),\n",
+       " (140.0, 0.008877),\n",
+       " (145.0, 0.0055491),\n",
+       " (150.0, 0.00097792),\n",
+       " (155.0, 0.00024781),\n",
+       " (160.0, 0.00010705)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_pairs"
    ]
   },
   {
@@ -197,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "5c6da73f",
    "metadata": {},
    "outputs": [
@@ -210,30 +241,27 @@
     }
    ],
    "source": [
+    "%cd /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/HZ4l_HLFV_1M_HMass150_Seed150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a356125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "8a356125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir('run_01')\n",
-    "a=subprocess.run(['grep', '#  Integrated weight', \"run_01_tag_1_banner.txt\"], text=True, capture_output=True).stdout\n",
-    "os.chdir(\"..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "a57c1167",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# float(a.split(\" \")[-3])\n",
-    "b=a.split(\" \")[-1]"
+    "int d=5;"
    ]
   },
   {
