Refactor Combine Scripts and Data Cards for Upper Limit Calculations
- Updated Combine_Script.sh in Combined_Upperlimit to correct yield values and remove stray characters.
- Modified loop_scratch.ipynb to adjust execution counts and update cut flow reports with new yield values.
- Introduced new Combine_Script.sh and Data_Card_Combine.dat files in set_01_CorrectedRate for corrected rate calculations.
- Added new Combine_Script.sh and Data_Card_Combine.dat files in set_02_EdittedSignalYieldBaseGeneration to implement edited signal yields based on generator cross-sections.

--- a/Analysis/loop_scratch.ipynb
+++ b/Analysis/loop_scratch.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4a28bcb8",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c5cdd240",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "78def08a",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "206430fa",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "5d9ec718",
    "metadata": {},
    "outputs": [
@@ -495,11 +495,11 @@
       "Cut Flow Report for LFV_hm110:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm110                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         569374/1000000 (56.94%)  569374/1000000 (56.94%)  569374/1000000 (56.94%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  668065/1000000 (66.81%)  \n",
       "\n",
-      "2ndCut         569374/1000000 (56.94%)  569374/1000000 (56.94%)  569374/1000000 (56.94%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  668000/1000000 (66.80%)  \n",
       "\n",
-      "3rdCut         569374/1000000 (56.94%)  569374/1000000 (56.94%)  569374/1000000 (56.94%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  667965/1000000 (66.80%)  \n",
       "\n",
       "4thCut         6187/1000000 (0.62%)     6173/1000000 (0.62%)     617264/1000000 (61.73%)  \n",
       "\n",
@@ -507,11 +507,11 @@
       "Cut Flow Report for LFV_hm115:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm115                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         617264/1000000 (61.73%)  617264/1000000 (61.73%)  617264/1000000 (61.73%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  663230/1000000 (66.32%)  \n",
       "\n",
-      "2ndCut         617264/1000000 (61.73%)  617264/1000000 (61.73%)  617264/1000000 (61.73%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  663171/1000000 (66.32%)  \n",
       "\n",
-      "3rdCut         617264/1000000 (61.73%)  617264/1000000 (61.73%)  617264/1000000 (61.73%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  663128/1000000 (66.31%)  \n",
       "\n",
       "4thCut         3686/1000000 (0.37%)     3599/1000000 (0.36%)     611064/1000000 (61.11%)  \n",
       "\n",
@@ -519,11 +519,11 @@
       "Cut Flow Report for LFV_hm120:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm120                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         611064/1000000 (61.11%)  611064/1000000 (61.11%)  611064/1000000 (61.11%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  656820/1000000 (65.68%)  \n",
       "\n",
-      "2ndCut         611064/1000000 (61.11%)  611064/1000000 (61.11%)  611064/1000000 (61.11%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  656753/1000000 (65.68%)  \n",
       "\n",
-      "3rdCut         611064/1000000 (61.11%)  611064/1000000 (61.11%)  611064/1000000 (61.11%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  656707/1000000 (65.67%)  \n",
       "\n",
       "4thCut         2003/1000000 (0.20%)     1916/1000000 (0.19%)     604286/1000000 (60.43%)  \n",
       "\n",
@@ -531,11 +531,11 @@
       "Cut Flow Report for LFV_hm125:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm125                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         604286/1000000 (60.43%)  604286/1000000 (60.43%)  604286/1000000 (60.43%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  652142/1000000 (65.21%)  \n",
       "\n",
-      "2ndCut         604286/1000000 (60.43%)  604286/1000000 (60.43%)  604286/1000000 (60.43%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  652063/1000000 (65.21%)  \n",
       "\n",
-      "3rdCut         604286/1000000 (60.43%)  604286/1000000 (60.43%)  604286/1000000 (60.43%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  652032/1000000 (65.20%)  \n",
       "\n",
       "4thCut         969/1000000 (0.10%)      959/1000000 (0.10%)      597715/1000000 (59.77%)  \n",
       "\n",
@@ -543,11 +543,11 @@
       "Cut Flow Report for LFV_hm130:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm130                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         597715/1000000 (59.77%)  597715/1000000 (59.77%)  597715/1000000 (59.77%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  647464/1000000 (64.75%)  \n",
       "\n",
-      "2ndCut         597715/1000000 (59.77%)  597715/1000000 (59.77%)  597715/1000000 (59.77%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  647386/1000000 (64.74%)  \n",
       "\n",
-      "3rdCut         597715/1000000 (59.77%)  597715/1000000 (59.77%)  597715/1000000 (59.77%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  647332/1000000 (64.73%)  \n",
       "\n",
       "4thCut         405/1000000 (0.04%)      386/1000000 (0.04%)      591248/1000000 (59.12%)  \n",
       "\n",
@@ -555,11 +555,11 @@
       "Cut Flow Report for LFV_hm135:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm135                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         591248/1000000 (59.12%)  591248/1000000 (59.12%)  591248/1000000 (59.12%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  642591/1000000 (64.26%)  \n",
       "\n",
-      "2ndCut         591248/1000000 (59.12%)  591248/1000000 (59.12%)  591248/1000000 (59.12%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  642516/1000000 (64.25%)  \n",
       "\n",
-      "3rdCut         591248/1000000 (59.12%)  591248/1000000 (59.12%)  591248/1000000 (59.12%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  642487/1000000 (64.25%)  \n",
       "\n",
       "4thCut         148/1000000 (0.01%)      123/1000000 (0.01%)      583566/1000000 (58.36%)  \n",
       "\n",
@@ -567,11 +567,11 @@
       "Cut Flow Report for LFV_hm140:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm140                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         583566/1000000 (58.36%)  583566/1000000 (58.36%)  583566/1000000 (58.36%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  639623/1000000 (63.96%)  \n",
       "\n",
-      "2ndCut         583566/1000000 (58.36%)  583566/1000000 (58.36%)  583566/1000000 (58.36%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  639553/1000000 (63.96%)  \n",
       "\n",
-      "3rdCut         583566/1000000 (58.36%)  583566/1000000 (58.36%)  583566/1000000 (58.36%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  639516/1000000 (63.95%)  \n",
       "\n",
       "4thCut         40/1000000 (0.00%)       40/1000000 (0.00%)       575209/1000000 (57.52%)  \n",
       "\n",
@@ -579,11 +579,11 @@
       "Cut Flow Report for LFV_hm145:\n",
       "Cut Name       HZ4Lep                   ZWW4Lep                  LFV_hm145                \n",
       "------------------------------------------------------------------------------------------\n",
-      "1stCut         575209/1000000 (57.52%)  575209/1000000 (57.52%)  575209/1000000 (57.52%)  \n",
+      "1stCut         590512/1000000 (59.05%)  590606/1000000 (59.06%)  642346/1000000 (64.23%)  \n",
       "\n",
-      "2ndCut         575209/1000000 (57.52%)  575209/1000000 (57.52%)  575209/1000000 (57.52%)  \n",
+      "2ndCut         294732/1000000 (29.47%)  294795/1000000 (29.48%)  642278/1000000 (64.23%)  \n",
       "\n",
-      "3rdCut         575209/1000000 (57.52%)  575209/1000000 (57.52%)  575209/1000000 (57.52%)  \n",
+      "3rdCut         294689/1000000 (29.47%)  294758/1000000 (29.48%)  642231/1000000 (64.22%)  \n",
       "\n",
       "4thCut         9/1000000 (0.00%)        7/1000000 (0.00%)        569374/1000000 (56.94%)  \n",
       "\n",
@@ -642,7 +642,8 @@
     "                    mask = arr[cut_name]\n",
     "                else:\n",
     "                    mask = arr[f'4thCut_{anchor_name[4:]}']\n",
-    "\n",
+    "            else:\n",
+    "                mask = arr[cut_name]\n",
     "            passed_events = np.sum(mask)\n",
     "            if cut_name==\"4thCut\":\n",
     "                data_collected[anchor_name][name]=(passed_events,total_events)\n",
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "272172bf",
    "metadata": {},
    "outputs": [
@@ -721,18 +722,24 @@
     "# Calculate Yeilds of each Signal and Background after all cuts\n",
     "print(\"Yield Report after all cuts:\")\n",
     "Yield=data_collected.copy()\n",
+    "signal_yield=[]\n",
+    "zww4l_yield=[]\n",
+    "hz4l_yield=[]\n",
     "for anchor_name, data in Yield.items():\n",
     "    print(f\"\\nYield Report for {anchor_name}:\")\n",
     "    for dataset_name, (passed_events, total_events) in data.items():\n",
     "        if total_events > 0:\n",
     "            if dataset_name == anchor_name:\n",
     "                yeild = passed_events / total_events # Assuming 1ab^-1 luminosity and 1M events\n",
+    "                signal_yield.append(yeild)\n",
     "            elif dataset_name == \"HZ4Lep\":\n",
     "                luminosity = total_events/2.797 # N=xsec * luminosity\n",
     "                yeild =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "                hz4l_yield.append(yeild)\n",
     "            elif dataset_name == \"ZWW4Lep\":\n",
     "                luminosity = total_events/2.691 # N=xsec * luminosity\n",
     "                yeild =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "                zww4l_yield.append(yeild)\n",
     "            print(f\"{dataset_name}: {yeild:.6f} events/ab^-1\")\n",
     "            data[dataset_name]=yeild\n",
     "        else:\n",
@@ -741,46 +748,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "b95d5a4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'LFV_hm110': {'HZ4Lep': 0.017305039,\n",
-       "  'ZWW4Lep': 0.016611543,\n",
-       "  'LFV_hm110': 0.617264},\n",
-       " 'LFV_hm115': {'HZ4Lep': 0.010309742000000002,\n",
-       "  'ZWW4Lep': 0.009684908999999998,\n",
-       "  'LFV_hm115': 0.611064},\n",
-       " 'LFV_hm120': {'HZ4Lep': 0.005602391000000001,\n",
-       "  'ZWW4Lep': 0.005155956,\n",
-       "  'LFV_hm120': 0.604286},\n",
-       " 'LFV_hm125': {'HZ4Lep': 0.0027102930000000003,\n",
-       "  'ZWW4Lep': 0.002580669,\n",
-       "  'LFV_hm125': 0.597715},\n",
-       " 'LFV_hm130': {'HZ4Lep': 0.001132785,\n",
-       "  'ZWW4Lep': 0.001038726,\n",
-       "  'LFV_hm130': 0.591248},\n",
-       " 'LFV_hm135': {'HZ4Lep': 0.00041395600000000005,\n",
-       "  'ZWW4Lep': 0.00033099299999999997,\n",
-       "  'LFV_hm135': 0.583566},\n",
-       " 'LFV_hm140': {'HZ4Lep': 0.00011188000000000002,\n",
-       "  'ZWW4Lep': 0.00010763999999999999,\n",
-       "  'LFV_hm140': 0.575209},\n",
-       " 'LFV_hm145': {'HZ4Lep': 2.5173000000000004e-05,\n",
-       "  'ZWW4Lep': 1.8837e-05,\n",
-       "  'LFV_hm145': 0.569374}}"
+       "[0.617264,\n",
+       " 0.611064,\n",
+       " 0.604286,\n",
+       " 0.597715,\n",
+       " 0.591248,\n",
+       " 0.583566,\n",
+       " 0.575209,\n",
+       " 0.569374]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Yield"
+    "signal_yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a6eaa7bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.017305039,\n",
+       " 0.010309742000000002,\n",
+       " 0.005602391000000001,\n",
+       " 0.0027102930000000003,\n",
+       " 0.001132785,\n",
+       " 0.00041395600000000005,\n",
+       " 0.00011188000000000002,\n",
+       " 2.5173000000000004e-05]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hz4l_yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d20afcb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.016611543,\n",
+       " 0.009684908999999998,\n",
+       " 0.005155956,\n",
+       " 0.002580669,\n",
+       " 0.001038726,\n",
+       " 0.00033099299999999997,\n",
+       " 0.00010763999999999999,\n",
+       " 1.8837e-05]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zww4l_yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dc1991e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[0.834,\n",
+       " 0.758,\n",
+       " 0.679,\n",
+       " 0.598,\n",
+       " 0.513,\n",
+       " 0.422,\n",
+       " 0.321,\n",
+       " 0.199]\n",
+       "-------\n",
+       "backend: cpu\n",
+       "nbytes: 64 B\n",
+       "type: 8 * float64</pre>"
+      ],
+      "text/plain": [
+       "<Array [0.834, 0.758, 0.679, ..., 0.422, 0.321, 0.199] type='8 * float64'>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# editted signal yields base on genetor xsec\n",
+    "xsec_LFV_hm = ak.Array(\n",
+    "    [(110.0, 0.021482),\n",
+    "    (115.0, 0.019718),\n",
+    "    (120.0, 0.017863),\n",
+    "    (125.0, 0.015901),\n",
+    "    (130.0, 0.013802),\n",
+    "    (135.0, 0.011504),\n",
+    "    (140.0, 0.008877),\n",
+    "    (145.0, 0.0055491),\n",
+    "    (150.0, 0.00097792),\n",
+    "    (155.0, 0.00024781),\n",
+    "    (160.0, 0.00010705)])\n",
+    "xsec_only_values=xsec_LFV_hm['1']\n",
+    "xsec_multiplier= xsec_only_values / xsec_only_values[3]  # Normalize to the value at 125 GeV\n",
+    "editted_signal_yield = signal_yield * xsec_multiplier[:-3]\n",
+    "editted_signal_yield"
    ]
   },
   {
