Add background uncertainty and update data card for combined upper limit analysis
- Modified Data_Card_Combine.dat to include background uncertainty parameter (bkg_unc).
- Updated the script Combine_Script.sh to automate the generation of data cards for different mass points.
- Added a new data card for background uncertainty analysis in set_03_BgUncertain2.
- Incremented execution counts in loop_scratch.ipynb to reflect new code cells.

--- a/Analysis/loop_scratch.ipynb
+++ b/Analysis/loop_scratch.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "dc1991e7",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "<Array [0.834, 0.758, 0.679, ..., 0.422, 0.321, 0.199] type='8 * float64'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,6 +879,44 @@
     "xsec_multiplier= xsec_only_values / xsec_only_values[3]  # Normalize to the value at 125 GeV\n",
     "editted_signal_yield = signal_yield * xsec_multiplier[:-3]\n",
     "editted_signal_yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4fd551ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[1.35,\n",
+       " 1.24,\n",
+       " 1.12,\n",
+       " 1,\n",
+       " 0.868,\n",
+       " 0.723,\n",
+       " 0.558,\n",
+       " 0.349,\n",
+       " 0.0615,\n",
+       " 0.0156,\n",
+       " 0.00673]\n",
+       "---------\n",
+       "backend: cpu\n",
+       "nbytes: 88 B\n",
+       "type: 11 * float64</pre>"
+      ],
+      "text/plain": [
+       "<Array [1.35, 1.24, 1.12, 1, ..., 0.0615, 0.0156, 0.00673] type='11 * float64'>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xsec_multiplier"
    ]
   },
   {
