Update analysis scripts and data cards for NotZ_dR and mass threshold calculations

--- a/Analysis/PythonWorkBench/ResultReader.ipynb
+++ b/Analysis/PythonWorkBench/ResultReader.ipynb
@@ -138,6 +138,7 @@
        " 'Status_04_Z_Window',\n",
        " 'Status_05_NotZ_dR',\n",
        " 'Status_06_NotZ_MET_dPhi',\n",
+       " 'Status_07_NotZ_MassThreshold',\n",
        " 'NearestZ_Mass',\n",
        " 'OtherPair_Mass',\n",
        " 'Z_PairIndexSum',\n",
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6ab1ee80",
    "metadata": {},
    "outputs": [
@@ -168,7 +169,7 @@
        "dict_keys(['HLFV_130GeV', 'HLFV_135GeV', 'HLFV_110GeV', 'HLFV_140GeV', 'ZWW4l', 'HLFV_145GeV', 'HZ4l', 'HLFV_125GeV', 'HLFV_120GeV', 'HLFV_115GeV'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "a7f28d37",
    "metadata": {},
    "outputs": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "a451a7aa",
    "metadata": {},
    "outputs": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7b1888ad",
    "metadata": {},
    "outputs": [
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1c7f63e5",
    "metadata": {},
    "outputs": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "744bad1f",
    "metadata": {},
    "outputs": [
@@ -388,15 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16b62369",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "1c8a4bf9",
    "metadata": {},
    "outputs": [
@@ -441,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "e3aa5e82",
    "metadata": {},
    "outputs": [
@@ -494,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e56b668a",
    "metadata": {},
    "outputs": [
@@ -517,7 +510,7 @@
        " 'NotZ_MuMET_dPhi']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +534,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ebaac548",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HLFV_110GeV yield at 1ab^-1: 0.576983\n",
+      "HLFV_115GeV yield at 1ab^-1: 0.575509\n",
+      "HLFV_120GeV yield at 1ab^-1: 0.572547\n",
+      "HLFV_125GeV yield at 1ab^-1: 0.570358\n",
+      "HLFV_130GeV yield at 1ab^-1: 0.568789\n",
+      "HLFV_135GeV yield at 1ab^-1: 0.566312\n",
+      "HLFV_140GeV yield at 1ab^-1: 0.563238\n",
+      "HLFV_145GeV yield at 1ab^-1: 0.559844\n",
+      "HZ4l yield at 1ab^-1: 0.005594000000000001\n",
+      "ZWW4l yield at 1ab^-1: 0.005634953999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate yield of 05_NotZ_dR cut\n",
+    "signalType=[\"HLFV_110GeV\",\"HLFV_115GeV\",\"HLFV_120GeV\",\"HLFV_125GeV\",\"HLFV_130GeV\",\"HLFV_135GeV\",\"HLFV_140GeV\",\"HLFV_145GeV\",\"HZ4l\",\"ZWW4l\"]\n",
+    "for key in signalType:\n",
+    "    total_events = 1000000  # Assuming each dataset has 1 million events\n",
+    "    passed_events = ak.sum(raw_data[key]['Status_07_NotZ_MassThreshold'])\n",
+    "    if key not in [\"HZ4l\", \"ZWW4l\"]:\n",
+    "        yield_value = passed_events / total_events\n",
+    "        # print(f\"{key}:{yield_value}\")\n",
+    "    \n",
+    "    elif key == \"HZ4l\":\n",
+    "        luminosity = total_events/2.797 # N=xsec * luminosity\n",
+    "        yield_value =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "        \n",
+    "    elif key == \"ZWW4l\":\n",
+    "        luminosity = total_events/2.691 # N=xsec * luminosity\n",
+    "        yield_value =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "    print(f\"{key} yield at 1ab^-1: {yield_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cbf0bcd",
    "metadata": {},
    "outputs": [],
    "source": []
